# Twitter_Positivity_Analyzer

./: .pre-commit-config.yaml  .pre-commit-config.yml  README.md  create_lambda.tf  environment.yml  pyproject.toml
.dvc/: config
.github/actions/setup_environment/: action.yml
.github/workflows/: backend_deployment.yml  cd.yml  ci.yml  frontend_deployment.yml  integration_testing.yml  poetry_install.yml  unit_testing.yml
data/: BERT_model.dvc  BERT_tokenizer.dvc
notebooks/: sentiment_analysis.ipynb
tests/: fixtures.py  test_data_preprocessing.py  test_scraper.py  test_train_utils.py
tests/data/: sub_test_sample.csv  sub_train_sample.csv  testing_data.pkl  testing_data.pkl.dvc
tests/integration/: .test_entire_workflow.py.swp  test_entire_workflow.py
tests/unitary/: test_data_preprocessing.py
twitter_analyzer/: __init__.py  data_preprocessing.py  train.py  utils.py
twitter_analyzer/scraper/: __init__.py  tweet_scraper.py
web_app/: app.py  backend.Dockerfile  backend.py  frontend.Dockerfile  frontend.py
