[tool.poetry]
name = "twitter_positivity_analyzer"
version = "0.1.0"
description = "Analyze Twitter positivity"
authors = ["hectorLop <lopez.almazan.hector@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.18.0"
scikit-learn = "1.0.2"
torch = "1.10.0"
pandas = "1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
