[tool.poetry]
name = "twitter_positivity_analyzer"
version = "0.1.0"
description = "Analyze Twitter positivity"
authors = ["hectorLop <lopez.almazan.hector@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
transformers = "^4.18.0"
scikit-learn = "^1.0.2"
torch = "^1.10.1"
pandas = "^1.4.0"
pre-commit = "^2.19.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
