[tool.poetry]
name = "twitter_positivity_analyzer"
version = "0.1.0"
description = "Analyze Twitter positivity"
authors = ["hectorLop <lopez.almazan.hector@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.18.0"
scikit-learn = "^1.0.2"
torch = "^1.10.1"
pandas = "^1.4.0"
pre-commit = "^2.19.0"
black = "^22.3.0"
twint = "^2.1.20"
nest-asyncio = "^1.5.5"
gradio = "^2.9.4"
pytest = "^7.1.2"
boto3 = "^1.23.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
